--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.26.0",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.0",
     "element-ui": "^2.15.6",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.14",
