--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.26.0",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.0",
+    "echarts": "^5.3.1",
     "element-china-area-data": "^5.0.2",
     "element-ui": "^2.15.6",
     "register-service-worker": "^1.7.2",
